--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "@types/react-transition-group": "^4.4.5",
     "axios": "^1.3.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-transition-group": "^4.4.5",
     "styled-components": "5.3.5"
   },
   "devDependencies": {
